Various code improvements and small fixes to the Font area